# Industrial-AI

./: README.md
2021-1학기/딥러닝 실제/과제 자료/04주차 Matplotlib/: 4주차 과제.py
2021-1학기/딥러닝 실제/과제 자료/05주차 Full Adder 구현/: 5주차 과제.py
2021-1학기/딥러닝 실제/실습 자료/05주차 Activation Function 구현/: 5주차 실습1_계단함수.py  5주차 실습2_시그모이드함수.py  5주차 실습3_ReLU함수.py
2021-1학기/딥러닝 실제/실습 자료/06주차 Neural Network 구현/: 6주차 실습2_Softmax 함수 구현.py  6주차 실습3_배치 처리 구현.py
2021-1학기/딥러닝 실제/실습 자료/09주차 Neural Network Train 구현/: 9주차 실습1_2층 신경망 클래스 구현.py
2021-1학기/딥러닝 실제/실습 자료/10주차 Backpropagation 구현/: 10주차 실습1_곱셈계층 및 덧셈계층 구현.py
2021-1학기/산업인공지능개론/과제 자료/13주차 Mini Project 3/: ResNet 모델 전이학습.py
2022-1학기/딥러닝 실제/1.과제/05주차 Full Adder Perceptron/: Full_Adder_Perceptron.py
2022-1학기/딥러닝 실제/1.과제/09주차 Train Neural Network/: Train_Neural_Network.py
2022-1학기/딥러닝 실제/2.실습/06주차 Neural Network 구현/: 6주차 실습1_회로 신경망 구현.py  6주차 실습4_Mnist 구현.py
2022-1학기/딥러닝 실제/2.실습/11주차 Multi Layer Perceptron 구현/: 11주차 실습1_Affine 계층 구현.py
2022-1학기/산업인공지능개론/1.과제/05주차 Mini Project 1/: Durable Rules.py
2022-1학기/산업인공지능개론/1.과제/09주차 Mini Project 2/: 학습 적합 여부 판단 프로그램.py
2022-1학기/산업인공지능개론/1.과제/Mini Project 4/: 6주차 실습1_회귀.py
2022-1학기/산업인공지능개론/1.과제/Mini Project 5/: 12주차 실습1_Resnet.py
2022-1학기/산업인공지능개론/2.실습/06주차 Regression 구현/: 6주차 실습2_로지스틱 회귀.py
2022-1학기/산업인공지능개론/실습 자료/12주차 Model 구현/: 12주차 실습2_Cifar10.py
2022-2학기/지능로봇 실제/과제 자료/13주차 ROS Rviz tf/pcl/: CMakeLists.txt
2022-2학기/지능로봇 실제/과제 자료/ROS Msg Srv Param/msg srv param/: CMakeLists.txt  package.xml
2022-2학기/지능로봇 실제/과제 자료/ROS Msg Srv Param/msg srv param/msg/: msg.msg
2022-2학기/지능로봇 실제/과제 자료/ROS Msg Srv Param/msg srv param/src/: server.cpp
2022-2학기/지능로봇 실제/과제 자료/ROS Msg Srv Param/msg srv param/srv/: srv.srv
2022-2학기/지능로봇 실제/과제 자료/ROS Rviz tf/learning_tf/: CMakeLists.txt
2023-2학기/지능화 파일럿 프로젝트/: [지능화파일럿] 프로젝트 계획서_(양식)_20230912.pptx
Education/: ~$포트폴리오작성및관리.pptx
projects/데이터마이닝/Tayko_Prediction_Model/: Tayko Prediction Model by JH.ipynb
(+76 files in other folders)
